--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,52 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+.btn-wrapper {
+  /* flexbox */
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+
+.btn {
+  color: #000;
+  background-color: #fff;
+  border: 2px solid #cecece;
+  font-size: 1rem;
+  padding: 0.35rem 1rem 0.25rem 1rem;
+}
+
+.btn-hover {
+  background-color: #d1e0fe;
+}
+
+.btn-focus {
+  border: black solid 2px;
+  outline: none;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #000;
+  width: 100%;
+  padding: 0.75rem;
+  font-size: 1.3rem;
+  border: black solid 2px;
+  margin: 1rem 0;
+}
+
+.btn-primary:hover {
+  background-color: #444242;
+}
+
+.btn-primary:focus {
+  color: #000;
+  outline: none;
+  border: #000 solid 2px;
+  background-color: #d7ecff;
+}
+
+.btn-primary:active {
+  background-color: #212020;
+}
