--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -108,4 +108,12 @@
       <td><app-book (remove)="remove(b)" [book]="b"></app-book></td>
     </tr>
   </table>
+
+  <p class="observacao">
+    Procurou-se neste sitio obedecer as normas da escripta portugueza anteriores
+    á mal inspirada
+    <a href="https://pt.wikipedia.org/wiki/Reforma_Ortogr%C3%A1fica_de_1911">
+    Reforma Orthographica de 1911</a>
+  </p>
+  <script src="scripts/main.js"></script>
 </div>
