--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,7 +20,8 @@ label {
   padding-bottom: 1rem;
 }
 
-.lg-text-input {
+.lg-text-input,
+.lg-select {
   width: 100%;
   padding: 1rem;
   border: 2px solid #000;
@@ -33,8 +34,12 @@ label {
   margin-bottom: 2rem;
 }
 
-.btn-menu {
+.btn-menu,
+select,
+option {
   flex: 1 1 25%;
+  font-size: 1rem;
+  margin-bottom: 2rem;
 }
 
 .active {
